# agente-bsc-rag

./: .coverage.LAPTOP-MVIM8M6L.18632.XBuiEuCx  .coverage.LAPTOP-MVIM8M6L.19384.XOSTkQJx  .coverage.LAPTOP-MVIM8M6L.29668.XGWRDTkx  .coverage.LAPTOP-MVIM8M6L.30028.XvphhtQx  .cursorignore  .cursorindexingignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  APRESENTAÇÃO.md  COMO_PARAR_STREAMLIT_WINDOWS.md  CONFIGURACAO_RAPIDA.md  CONTINUE_PROJECT_PROMPT.md  CONTINUE_PROJECT_PROMPT_SHORT.md  DOCUMENTACAO_FINAL_MVP_SUMMARY.md  Dockerfile  E2E_TESTS_IMPLEMENTATION_SUMMARY.md  GUIA_TESTE_USUARIO.md  IMPLEMENTATION_SUMMARY.md  INSTALACAO_SUCESSO.md  LESSONS_LEARNED.md  LICENSE  MULTILINGUAL_OPTIMIZATION_SUMMARY.md  PRE_COMMIT_IMPLEMENTATION.md  PROGRESS.md  README.md  RUN_GUIDE.md  SETUP.md  STREAMLIT_IMPLEMENTATION.md  app.py  clear_all_cache.ps1  docker-compose.yml  fix-cursor-keybindings.md  force_full_reload.ps1  force_reload_modules.ps1  pyproject.toml  recreate_venv.ps1  requirements.txt  reset-clipboard.ps1  (+5 more)
.cursor/diagnostics/: bugs-pre-existentes-analise.md
.cursor/docs/: PRE_COMMIT_SETUP.md
.cursor/plans/: Plano_refatoracao_onboarding_conversacional.md  Plano_refatoracao_onboarding_conversacional.plan.md  consulting-transformation-v2.plan.md  fase-2-rag-avancado.plan.md  fase-2b-rag-avancado.plan.md  moderniza--o-rag-bsc-2005d8aa.plan.md  moderniza--o-rag-bsc.md  moderniza--o-rag-bsc.plan.md
.cursor/progress/: consulting-progress.md
.cursor/prompts/: continuidade-bloco2-onboarding.md  sessao-39-continuacao.md
.cursor/reviews/: code-review-pr5-onboarding-refactor.md
.cursor/rules/: Metodologias_causa_raiz.md  derived-cursor-rules.mdc  rag-bsc-core.mdc  rag-recipes.mdc  rag-techniques-catalog.mdc
.github/workflows/: ci.yml
.specstory/: .what-is-this.md
.specstory/history/: 2025-10-14_22-20Z-leia-o-plano-e-aguarde-instruções.md  2025-10-14_22-48Z-liberar-arquivo-env-do-globalcursorignore.md  2025-10-15_00-14Z-executar-benchmark-da-fase-2a.md  2025-10-15_00-22Z-me-ajude-a-resolver.md
api/: __init__.py  dependencies.py  main.py
api/middleware/: __init__.py  analytics.py  performance.py
app/: __init__.py  main.py  utils.py
config/: settings.py
data/: README.md  bsc_data.db
docs/: API_REFERENCE.md  APRESENTACAO.md  ARCHITECTURE.md  CHECKLIST_PONTO_15_EXPANDED.md  CONFIGURACAO_RAPIDA.md  DEPLOYMENT.md  DOCS_INDEX.md  GPT5_CONTEXTUAL_RETRIEVAL.md  JUDGE_CONTEXT_AWARE.md  JUDGE_DIAGNOSTIC_INTEGRATION.md  LANGCHAIN_V1_MIGRATION.md  LANGGRAPH_WORKFLOW.md  LESSONS_LEARNED.md  PRD_BSC_RAG_AGENT.md  PRE_COMMIT_SETUP.md  QUICKSTART.md  SQLITE_PERSISTENCE.md  STREAMLIT_GUIDE.md  TESTING_GUIDE.md  TEXTO BASE PARA TESTE.txt  TUTORIAL.md  VECTOR_DB_COMPARISON.md  VECTOR_STORE_MIGRATION_GUIDE.md  WINDOWS_STREAMLIT_CTRLC_FIX.md
examples/: judge_context_aware_demo.py  run_workflow_example.py
pages/: 0_consultor_bsc.py  1_strategy_map.py  2_action_plan.py  3_dashboard.py  __init__.py
prompts/: DEBUGGING_SYSTEMATIC_PROMPT.md  DEBUG_QUICK_PROMPT.md  README.md
scripts/: README_SCRIPTS.md  README_pre_commit_hooks.md  README_validate_schemas.md  analyze_alignment.py  build_knowledge_base.py  check_config_hardcoding.py  check_databases.py  check_no_emoji.py  check_schema_alignment.py  clear_all_cache.ps1  clear_database.py  clear_mem0_FORCE.py  clear_mem0_NOW.py  clear_mem0_database.py  diagnose_heuristics.py  force_full_reload.ps1  force_reload_modules.ps1  git_commit.ps1  git_quick_commit.ps1  inspect_ground_truth.py  install_sqlite_persistence.py  remove_all_emojis.py  reset_mem0_complete.py  restart_streamlit.ps1  start_streamlit.ps1  stop_streamlit.ps1  test_gpt5_contextual.py  test_imports.py  test_kpi_validation_fix.py  test_loop_fix.py  test_mece_fix.py  test_mem0_get_all_format.py  test_mem0_load_fix.py  test_onboarding_conversation.py  test_pydantic_forward_ref_fix.py  test_query_decomposition.py  test_strategy_map_visual.py  valida_env.py  validate_pydantic_schemas.py  validate_setup.py  (+1 more)
src/: __init__.py
tests/: README.md  benchmark_queries.json  benchmark_query_decomposition.py  benchmark_report_query_decomposition.md  benchmark_vector_stores.py  conftest.py  test_action_plan.py  test_adaptive_reranking.py  test_agents_refactor_smoke.py  test_alignment_validator.py  test_approval_workflow.py  test_benchmarking_tool.py  test_client_profile_agent.py  test_config_settings.py  test_consulting_orchestrator.py  test_consulting_workflow.py  test_dashboard_streamlit.py  test_design_solution_workflow.py  test_diagnostic_agent.py  test_diagnostic_tools_integration.py  test_embedding_cache.py  test_embeddings.py  test_facilitator_cot.py  test_five_whys.py  test_implementation_workflow.py  test_issue_tree.py  test_judge_context_aware.py  test_judge_format_diagnostic.py  test_judge_integration_smoke.py  test_judge_simple.py  test_judge_workflow_unit.py  test_kpi_definer.py  test_memory_nodes.py  test_memory_schemas.py  test_multi_client_dashboard.py  test_onboarding_agent.py  test_onboarding_best_practices.py  test_onboarding_conversational.py  test_parallel_comparison.py  test_prioritization_matrix.py  (+20 more)
ui/: __init__.py
(+260 files in other folders)
